--- a/src/pages/ordering/cart/cart.html
+++ b/src/pages/ordering/cart/cart.html
@@ -1,8 +1,8 @@
 <ion-header>
     <ion-navbar>
-        <button ion-button menuToggle *ngIf="loggedIn">
-            <ion-icon name="menu"></ion-icon>
-        </button>
+        <!--<button ion-button menuToggle *ngIf="loggedIn">-->
+            <!--<ion-icon name="menu"></ion-icon>-->
+        <!--</button>-->
         <ion-title>
             {{ 'cart.title' | translate }}
         </ion-title>
