--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -9,5 +9,5 @@
   <ion-tab [root]="tab0Root" tabTitle="{{ 'tabs.menu' | translate }} " tabIcon="home"></ion-tab>
   <!--<ion-tab [root]="tab1Root" tabTitle="{{ 'tabs.news' | translate }} " tabIcon="cafe"></ion-tab>-->
   <ion-tab [root]="tab2Root" tabTitle="{{ 'tabs.cart' | translate }}" tabIcon="cart" tabBadge="{{ count > 0 ? count : '' }}"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="{{ 'tabs.orders_list' | translate }}" tabIcon="albums"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="{{ 'tabs.account' | translate }}" tabIcon="person"></ion-tab>
 </ion-tabs>
