--- a/src/pages/personal/signup/signup.html
+++ b/src/pages/personal/signup/signup.html
@@ -9,7 +9,7 @@
 				</ion-input>
 			</ion-item>
 			<ion-item>
-				<ion-input placeholder="{{ 'signup.phone' | translate }}" type="text" [formControl]="loginForm.controls.phone">
+				<ion-input placeholder="{{ 'signup.phone' | translate }}" type="tel" [formControl]="loginForm.controls.phone">
 				</ion-input>
 			</ion-item>
 			<ion-item>
