--- a/src/pages/personal/order_view/order_view.html
+++ b/src/pages/personal/order_view/order_view.html
@@ -26,7 +26,7 @@
             <p><b>{{ 'order.delivery_price' | translate }}</b> {{ order.delivery_price | ecurrency }}</p>
             <p><b>{{ 'order.total' | translate }}</b> {{ order.total | ecurrency }}</p>
             <p><b>{{ 'order.tax' | translate }}</b> {{ order.tax | ecurrency }}</p>
-            <p><b>{{ 'order.total_with_tax' | translate }}</b> {{ order.total_with_tax + order.delivery_price | ecurrency }}</p>
+            <p><b>{{ 'order.total_with_tax' | translate }}</b> {{ +order.total_with_tax + +order.delivery_price | ecurrency }}</p>
         </ion-item>
     </ion-card>
 </ion-content>
