--- a/src/pages/personal/account/account.html
+++ b/src/pages/personal/account/account.html
@@ -33,10 +33,8 @@
 	</ion-card>
 	
 	<ion-card>
-		<ion-card-content>
-			<button menuClose ion-item (click)="logout()" class="-b5">
-				Log out
-			</button>
-		</ion-card-content>
+	<button menuClose ion-button color="danger" (click)="logout()" class="-b5" style="width: 100%; margin:0;">
+		Log out
+	</button>
 	</ion-card>
 </ion-content>
