--- a/src/pages/ordering/address_map/address_map.html
+++ b/src/pages/ordering/address_map/address_map.html
@@ -1,11 +1,20 @@
 <div class="map-holder">
     <div #map class="address-map">
     </div>
+   
     <div class="address-input-holder">
-        <ion-item tappable (click)="showAddressCompletionWindow()">
-            <ion-input disabled [(ngModel)]="address"></ion-input>
-        </ion-item>
+        <ion-row>
+            <ion-col>
+                <ion-item tappable (click)="showAddressCompletionWindow()">
+                    <ion-input disabled [(ngModel)]="address"></ion-input>
+                </ion-item>
+            </ion-col>
+            <ion-col style="max-width: 35px; max-height: 35px">
+                    <button ion-button block outline (click)="getCurrentLocation()"><ion-icon name="radio-button-on"></ion-icon></button>
+            </ion-col>    
+        </ion-row>
     </div>
+
     <div class="address-input-buttons">
         <ion-grid>
             <ion-row>
@@ -27,7 +36,7 @@
         </ion-toolbar>
     </ion-header>
     <ion-content>
-        <ion-list class="address-variants">
+        <ion-list class="address-variants" style="margin-top:100px;">
             <ion-item *ngFor="let item of autocompleteItems" tappable (click)="chooseItem(item)">
                 {{ item }}
             </ion-item>
