--- a/src/pages/catalog/products/product_info.html
+++ b/src/pages/catalog/products/product_info.html
@@ -3,6 +3,6 @@
   <p class="product-descr" *ngIf="descr">{{ product.description }}</p>
   <div class="product-price">
     <span *ngIf="product.price_old && (product.price_old > 0)"><s>{{ product.price_old | ecurrency }}</s></span>
-    <span>{{ product.price | ecurrency }}</span>
+    <span style="font-size: 24px;">{{ product.price | ecurrency }}</span>
   </div>
 </div>
