--- a/src/pages/ordering/order/order.html
+++ b/src/pages/ordering/order/order.html
@@ -3,7 +3,7 @@
   height:100px;
 }
 .numbering {
-  font-size: 2em;
+  font-size: 1.4em;
 }
 </style>
 
@@ -46,16 +46,46 @@
     </ion-item>
     <ion-list radio-group [formControl]="orderForm.controls.payment_method">
       <ion-item>
-        <ion-label>{{ 'order.cash_on_delivery' | translate }}</ion-label>
-        <ion-radio name="payment_method" value="cash"></ion-radio>
+        <ion-label>Cash</ion-label>
+        <ion-radio name="payment_method" value="cash" (click)="toggleStripeForm('')"></ion-radio>
       </ion-item>
       <ion-item>
-        <ion-label>{{ 'order.stripe' | translate }}</ion-label>
-        <ion-radio name="payment_method" value="stripe"></ion-radio>
+        <ion-label>Card</ion-label>
+        <ion-radio id="stripe" name="payment_method" value="stripe" (click)="toggleStripeForm('stripe')"></ion-radio>
       </ion-item>
+
+      <div *ngIf="stripePushed" style="padding-bottom: 30px; margin-left: 30px; margin-right: 30px;">
+        <br>
+        <form [formGroup]="cardForm" (ngSubmit)="pay()" novalidate>
+          <ion-item>
+            <ion-label stacked>{{ 'credit_card.number' | translate }}</ion-label>
+            <ion-input type="text" pattern="[0-9]*" [formControl]="cardForm.controls.number"></ion-input>
+          </ion-item>
+          <ion-row>
+            <ion-col>
+              <ion-item>
+                <ion-label stacked>Exp MM</ion-label>
+                <ion-input type="text" pattern="[0-9]*" [formControl]="cardForm.controls.expMonth"></ion-input>
+              </ion-item>
+            </ion-col>
+            <ion-col>
+              <ion-item>
+                <ion-label stacked>Exp YY</ion-label>
+                <ion-input type="text" pattern="[0-9]*" [formControl]="cardForm.controls.expYear"></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-item>
+            <ion-label stacked>{{ 'credit_card.cvc' | translate }}</ion-label>
+            <ion-input type="text" pattern="[0-9]*" [formControl]="cardForm.controls.cvc"></ion-input>
+          </ion-item>
+          <!--<button type="submit" ion-button block primary>{{ 'credit_card.pay' | translate }}</button>-->
+          <!--<button (click)="closeModal()" type="button" ion-button block>{{ 'credit_card.cancel' | translate }}</button>-->
+        </form>
+      </div>
       <ion-item>
         <ion-label>{{ 'order.paypal' | translate }}</ion-label>
-        <ion-radio name="payment_method" value="paypal"></ion-radio>
+        <ion-radio name="payment_method" value="paypal" (click)="toggleStripeForm('')"></ion-radio>
       </ion-item>
     </ion-list>
     <ion-list *ngIf="userData.loyalty_reward > 0">
@@ -65,7 +95,7 @@
         <button ion-button item-right type="button" (click)="useReward()">{{ 'order.use' | translate }}</button>
       </ion-item>
     </ion-list>
-    <div class="cart-total -nob">
+    <div class="cart-total -nob" style="text-align: center;">
       <ion-row>
         <ion-col col-6>
           <span>{{ 'order.price' | translate }}</span><br /><span class="numbering"> {{ cTotalPrice | ecurrency }}</span>
@@ -96,6 +126,7 @@
         </ion-col>
       </ion-row>
     </div>
+    <br>
     <button type="submit" [disabled]="!orderForm.valid" ion-button block class="place-order-button">{{
       'order.place_order' | translate }}
     </button>
