--- a/src/pages/personal/profile/profile.html
+++ b/src/pages/personal/profile/profile.html
@@ -22,13 +22,13 @@
 			</ion-input>
 		</ion-item>
 		<ion-row>
-			<ion-col col-3>
+			<ion-col col-4>
 				<ion-item>
 					<ion-label stacked>Country</ion-label>
-					<ion-input type="tel" value="+44 " maxlength="28" readonly></ion-input>
+					<ion-input type="tel" value="+44 " pattern="[0-9]*" maxlength="28" readonly></ion-input>
 					</ion-item>
 			</ion-col>
-			<ion-col col-9>	
+			<ion-col>
 				<ion-item>
 						<ion-label stacked>Phone Number</ion-label>
 						<ion-input type="text" maxlength="10" [formControl]="profileForm.controls.phone"></ion-input>
