--- a/src/pages/ordering/cart/cart.html
+++ b/src/pages/ordering/cart/cart.html
@@ -16,35 +16,66 @@
         <br>
         {{ 'cart.empty' | translate }}
     </div>
-    <div class="product" *ngFor="let item of items">
-        <div *ngIf="item.product.images.length > 0" class="product-images">
-            <img [src]="item.product.images[0]">
-        </div>
-        <div padding class="product-info">
-            <h2>{{ item.product.name }}</h2>
-            <p class="product-descr">{{ item.product.description }}</p>
-            <div class="product-price">
-                <span *ngIf="item.product.price_old && (item.product.price_old > 0)"><s>{{ item.product.price_old }}</s></span>
-                <span>{{ item.product.price  | ecurrency }} x {{item.count }} = {{ item.product.price * item.count | ecurrency }}</span>
-            </div>
-            <ion-row no-padding>
-                <ion-col>
-                    <button ion-button block outline color="light" icon-left (click)="decreaseCart(item)">
-                        -
-                    </button>
-                </ion-col>
-                <ion-col class="text-center product-count">
-                    {{ item.count }}
-                </ion-col>
-                <ion-col>
-                    <button ion-button block outline color="light" icon-left (click)="increaseCart(item)">
-                        +
-                    </button>
-                </ion-col>
-            </ion-row>
-        </div>
+    <div >
+        <!--<div *ngIf="item.product.images.length > 0" class="product-images">-->
+            <!--<img [src]="item.product.images[0]">-->
+        <!--</div>-->
+
     </div>
+  <ion-list>
+  <ion-item-sliding *ngFor="let item of items">
+
+    <ion-item class="cart-item">
+      <div>
+        <div style="width: 100%;">
+          <div class="cart-product-info">
+            <h2>{{ item.product.name }}</h2>
+            <!--<p class="product-descr">{{ item.product.description }}</p>-->
+          </div>
+          <div class="cart-product-price">
+            <!--<span *ngIf="item.product.price_old && (item.product.price_old > 0)"><s>{{ item.product.price_old }}</s></span>-->
+            <span class="item-price" *ngIf="(item.extras != null)">{{ item.product.price * item.count + extrasSum(item)  | ecurrency }}</span>
+            <span class="item-price" *ngIf="(item.extras == null)">{{ item.product.price * item.count  | ecurrency }}</span>
+            <!--{{ item.product.price  | ecurrency }} x {{item.count}} =-->
+          </div>
+          <br class="clear"/>
+        </div>
+        <br class="clear"/>
+        <div *ngIf="((item.extras != null || item.exclusions != null) && (item.extras != '' || item.exclusions != ''))" class="extras-container">
+          <ion-row *ngFor="let extra of item.extras">
+            <span class="extra-row">+ {{ extra.extra_name }} 1 x £{{extra.extra_price}}</span>
+          </ion-row>
+          <ion-row *ngFor="let exclusion of item.exclusions">
+            <span class="extra-row">- {{ exclusion.extra_name }}</span>
+          </ion-row>
+        </div>
+
+
+        <!--<ion-row no-padding style="width: 100%;">-->
+        <!--<ion-col>-->
+        <!--<button ion-button block outline color="light" icon-left (click)="decreaseCart(item)">-->
+        <!-- - -->
+        <!--</button>-->
+        <!--</ion-col>-->
+        <!--<ion-col class="text-center product-count">-->
+        <!--{{ item.count }}-->
+        <!--</ion-col>-->
+        <!--<ion-col>-->
+        <!--<button ion-button block outline color="light" icon-left (click)="increaseCart(item)">-->
+        <!--+-->
+        <!--</button>-->
+        <!--</ion-col>-->
+        <!--</ion-row>-->
+      </div>
+    </ion-item>
+
+    <ion-item-options>
+      <button ion-button expandable (click)="decreaseCart(item)" >Delete</button>
+    </ion-item-options>
+  </ion-item-sliding>
+  </ion-list>
 </ion-content>
+
 <ion-footer [hidden]="items.length == 0">
     <div class="cart-total">{{ 'cart.total' | translate }}: {{ cartPrice() | ecurrency }}</div>
     <button type="button" ion-button block (click)="showOrderModal()" class="place-order-button">
