--- a/src/pages/ordering/order/order.html
+++ b/src/pages/ordering/order/order.html
@@ -1,13 +1,3 @@
-<style>
-.thetxtarea, .thetxtarea textarea {
-  height:100px;
-}
-
-.numbering {
-  font-size: 1.4em;
-}
-</style>
-
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
@@ -117,12 +107,12 @@
         <ion-col col-6>
           <span>{{ 'order.delivery_price' | translate }}</span><br /><span class="numbering"> {{ deliveryPrice | ecurrency }}</span>
         </ion-col>
-        <!-- <ion-col col-6>
-            <span>{{ 'order.total' | translate }}</span><br /><span class="numbering"> {{ +cTotalPrice + +deliveryPrice | ecurrency }}</span>
-        </ion-col> -->
+        <!--<ion-col col-6>-->
+            <!--<span>{{ 'order.total' | translate }}</span><br /><span class="numbering"> {{ +cTotalPrice + +deliveryPrice | ecurrency }}</span>-->
+        <!--</ion-col>-->
         <ion-col col-6>
             <div *ngIf="cLoyaltyUsed > 0">{{ 'order.loyalty_used' | translate:{amount: cLoyaltyUsed | ecurrency} }}</div>
-            <div *ngIf="discountPrice">{{ 'order.coupon_discount' | translate }}<br /><span class="numbering"> {{ +cFullPrice - +discountPrice | ecurrency}}</span></div>
+            <!--<div *ngIf="discountPrice > 0">{{ 'order.coupon_discount' | translate }}<br /><span class="numbering"> {{ +cFullPrice - +discountPrice | ecurrency}}</span></div>-->
         </ion-col>
         <!-- <ion-col col-6>
             <div *ngIf="discountPrice > 0 || cLoyaltyUsed > 0">Gross Total<br /><span class="numbering"> {{ +discountPrice - +cLoyaltyUsed + +deliveryPrice | ecurrency }}</span></div>
@@ -136,6 +126,9 @@
         <ion-col col-12>
           <div *ngIf="cTaxPrice > 0">
             <span>{{ 'order.total_with_tax' | translate }}</span><br /><span class="numbering"> {{ +cTaxPrice + +discountPrice - +cLoyaltyUsed + +deliveryPrice | ecurrency }}</span>
+          </div>
+          <div *ngIf="cTaxPrice == 0">
+            <span>{{ 'order.total' | translate }}</span><br /><span class="numbering"> {{ +cTotalPrice + +deliveryPrice | ecurrency }}</span>
           </div>
         </ion-col>
       </ion-row>
